--- a/app/src/main/res/layout/content_crime.xml
+++ b/app/src/main/res/layout/content_crime.xml
@@ -12,6 +12,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ru.alex_pst.criminalintent.CrimeActivity"
-    tools:showIn="@layout/activity_crime">
+    tools:showIn="@layout/activity_fragment">
 
 </RelativeLayout>
